--- a/frontend/src/app/modules/user/profile/admin-profile/admin-details/admin-details.component.html
+++ b/frontend/src/app/modules/user/profile/admin-profile/admin-details/admin-details.component.html
@@ -2,7 +2,7 @@
   <!-- main info -->
   <div>
     <!-- image -->
-    <div class="relative h-28 w-28 mx-auto">
+    <div class="relative h-28 w-28 object-cover mx-auto">
       <img [src]="userImage ? userImage : '/assets/images/placeholders/default.png'"
       alt="" class="rounded-full">
     </div>
