--- a/frontend/src/app/modules/admin/ride-rejection-requests/ride-rejection-requests.component.html
+++ b/frontend/src/app/modules/admin/ride-rejection-requests/ride-rejection-requests.component.html
@@ -25,7 +25,7 @@
                 [routerLink]="['/driver', request.driver.username]">
                 <img *ngIf="request.driver.profilePicture"
                 [src]="request.driver.profilePicture"
-                class="rounded-full"
+                class="rounded-full w-14 h-14 object-cover"
                 alt="No Profile Pic"/>
                 <div *ngIf="!request.driver.profilePicture" class="h-10 w-10 rounded-full border-2 border-stone-500">
               
