--- a/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
+++ b/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
@@ -146,7 +146,7 @@
         <img
           [src]="userImage ? userImage : '/assets/images/placeholders/default.png'"
           alt=""
-          class="w-11 h-11 rounded-full"
+          class="w-11 h-11 object-cover rounded-full"
         />
       </div>
 
