--- a/frontend/src/app/modules/user/profile/passenger-profile/passenger-details/passenger-details.component.html
+++ b/frontend/src/app/modules/user/profile/passenger-profile/passenger-details/passenger-details.component.html
@@ -4,7 +4,7 @@
     <!-- image -->
     <div class="relative h-28 w-28 mx-auto">
       <img [src]="userImage ? userImage : '/assets/images/placeholders/default.png'"
-      alt="" class="rounded-full">
+      alt="" class="h-28 w-28 rounded-full object-cover">
     </div>
 
     <div class="mt-2 text-gray-50 text-2xl tracking-tight leading-5">
