--- a/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
+++ b/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
@@ -4,7 +4,7 @@
   >
     <!-- menu -->
     <div
-      class="relative flex flex-col justify-center text-center text-xl w-11 h-11 my-auto rounded-full cursor-pointer hover:text-light shrink-0"
+      class="relative flex flex-col justify-center text-center text-xl w-11 h-11 my-auto rounded-full hover:text-light shrink-0"
     >
       <div *ngIf="accountType !== 'anonymous'" class="relative block my-auto">
         <div
