Fix ng lint issues

--- a/frontend/src/app/modules/main/order-menu/order-menu.component.html
+++ b/frontend/src/app/modules/main/order-menu/order-menu.component.html
@@ -291,7 +291,7 @@ sm:h-full select-none" id="order-menu">
     <app-error-modal
       [title]="errorTitle"
       [description]="errorMessage"
-      (onClose)="closeErrorModal()"
+      (closeModal)="closeErrorModal()"
     ></app-error-modal>
   </div>
 
