--- a/frontend/src/app/modules/chat/chat.component.html
+++ b/frontend/src/app/modules/chat/chat.component.html
@@ -1,4 +1,4 @@
-<div class="mt-auto" *ngIf="user.username != ''">
+<div class="mt-auto" *ngIf="user.username !== ''">
   <div
     class="bg-medium z-50 w-120 h-140 rounded-xl overflow-hidden flex absolute right-16 bottom-24"
     [ngClass]="{ 'w-80': user.role !== 'admin' }"
@@ -49,7 +49,7 @@
           class="overflow-x-hidden"
           id="listOfMessages"
         >
-          <div *ngIf="msg.sender != user.username" class="text-left">
+          <div *ngIf="msg.sender !== user.username" class="text-left">
             <p
               style="max-width: 250px"
               class="inline-block text-left mt-3 ml-2 mr-6 px-4 py-2 bg-gray-50 rounded-xl break-words"
