Implement route lazy loading and add 404 page

--- a/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
+++ b/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
@@ -128,7 +128,7 @@
     <!-- login -->
     <div
       *ngIf="accountType === 'anonymous'"
-      routerLink="/login"
+      routerLink="/auth/login"
       class="flex flex-col justify-center text-center text-xl w-11 h-11 my-auto rounded-full cursor-pointer hover:text-light"
     >
       <fa-icon [icon]="faArrowRightToBracket" class=""></fa-icon>
