--- a/frontend/src/app/modules/main/order-menu/order-menu.component.html
+++ b/frontend/src/app/modules/main/order-menu/order-menu.component.html
@@ -191,7 +191,7 @@ sm:h-full select-none" id="order-menu">
         </button>
         <div *ngIf="accountType === 'anonymous'" class="text-light text-center mt-6">
           You must
-          <span class="text-accent-light cursor-pointer font-bold"><a routerLink="/login">Log In</a></span>
+          <span class="text-accent-light cursor-pointer font-bold"><a routerLink="/auth/login">Log In</a></span>
           before ordering a ride
         </div>
       </div>
