Add basic ride order test

--- a/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
+++ b/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
@@ -101,6 +101,7 @@
     <div
       *ngIf="accountType !== 'driver'"
       class="flex flex-col justify-center text-center text-xl my-auto rounded-full font-medium"
+      id="suberTitle"
     >
       Suber
     </div>
