--- a/frontend/src/app/modules/main/order-menu/order-menu.component.html
+++ b/frontend/src/app/modules/main/order-menu/order-menu.component.html
@@ -164,7 +164,7 @@ sm:h-full select-none" id="order-menu">
             type="text" formControlName="splitFareEmail" placeholder="Enter a co-passenger's email">
             
             <button type="submit"
-            class="px-2 py-1 text-gray-50 hover:text-accent-light mx-auto">
+            class="px-2 py-1 text-gray-50 hover:text-accent-light mx-auto" id="addPassengerPlus">
               <fa-icon [icon]="faPlus"></fa-icon>
             </button>
           </div>
@@ -202,7 +202,7 @@ sm:h-full select-none" id="order-menu">
         <div *ngIf="!expandReservations" class="text-sm italic text-light hover:text-accent-light
         cursor-pointer text-center" (click)="expandReservations = true">
           <fa-icon [icon]="faStopwatch20"></fa-icon>
-          <span class="ml-2">Order in advance</span>
+          <span class="ml-2" id="order-in-advance">Order in advance</span>
         </div>
         
 
