Replace password change alerts with message modals

--- a/frontend/src/app/modules/user/profile/driver/driver-profile/driver-edit/driver-edit.component.html
+++ b/frontend/src/app/modules/user/profile/driver/driver-profile/driver-edit/driver-edit.component.html
@@ -384,10 +384,19 @@
     >Change password</span
   >
 </div>
+
 <div *ngIf="showConfirmModal">
   <app-error-modal
     title="Successfully sent request"
     description="Successfully sent profile update request to the admin!"
     (closeModal)="closeModal()"
   ></app-error-modal>
+</div>
+
+<div *ngIf="showResetPasswordConfirmationModal">
+  <app-error-modal 
+  [title]="'Success!'"
+  [description]="'An email was sent to your address.'"
+  (closeModal)="closeResetPasswordConfirmationModal()">
+  </app-error-modal>
 </div>
