--- a/frontend/src/app/modules/user/profile/admin-profile/admin-edit/admin-edit.component.html
+++ b/frontend/src/app/modules/user/profile/admin-profile/admin-edit/admin-edit.component.html
@@ -164,3 +164,11 @@
 
   </form>
 </div>
+
+<div *ngIf="showResetPasswordConfirmationModal">
+  <app-error-modal 
+  [title]="'Success!'"
+  [description]="'An email was sent to your address.'"
+  (closeModal)="closeResetPasswordConfirmationModal()">
+  </app-error-modal>
+</div>
