Rename error-modal to and automate driver activity toggling on login/logout

--- a/frontend/src/app/modules/user/profile/admin-profile/admin-edit/admin-edit.component.html
+++ b/frontend/src/app/modules/user/profile/admin-profile/admin-edit/admin-edit.component.html
@@ -166,9 +166,9 @@
 </div>
 
 <div *ngIf="showResetPasswordConfirmationModal">
-  <app-error-modal 
+  <app-message-modal 
   [title]="'Success!'"
   [description]="'An email was sent to your address.'"
   (closeModal)="closeResetPasswordConfirmationModal()">
-  </app-error-modal>
+  </app-message-modal>
 </div>
