--- a/frontend/src/app/modules/user/profile/driver/driver-profile/driver-edit/driver-edit.component.html
+++ b/frontend/src/app/modules/user/profile/driver/driver-profile/driver-edit/driver-edit.component.html
@@ -386,17 +386,17 @@
 </div>
 
 <div *ngIf="showConfirmModal">
-  <app-error-modal
+  <app-message-modal
     title="Successfully sent request"
     description="Successfully sent profile update request to the admin!"
     (closeModal)="closeModal()"
-  ></app-error-modal>
+  ></app-message-modal>
 </div>
 
 <div *ngIf="showResetPasswordConfirmationModal">
-  <app-error-modal 
+  <app-message-modal 
   [title]="'Success!'"
   [description]="'An email was sent to your address.'"
   (closeModal)="closeResetPasswordConfirmationModal()">
-  </app-error-modal>
+  </app-message-modal>
 </div>
